refactor: Simplify median calculation and improve variable naming in StudentService